--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,19 @@
 name = "SpectralGraphWavelet"
 uuid = "3dfa037c-0911-445a-8980-d6a37e5c973e"
-authors = ["luke-lowery"]
 version = "1.0.0-DEV"
+authors = ["luke-lowery"]
+
+[deps]
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
+LinearAlgebra = "1.12.0"
+Statistics = "1.11.1"
 julia = "1.10.10"
 
 [extras]
