--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "SpectralGraphWavelet"
 uuid = "3dfa037c-0911-445a-8980-d6a37e5c973e"
-version = "1.0.0-DEV"
+version = "0.1.0"
 authors = ["luke-lowery"]
 
 [deps]
@@ -11,8 +11,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
-LinearAlgebra = "1.12.0"
-julia = "1.10.10"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
