--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,11 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
+HDF5 = "0.17"
+LinearAlgebra = "1"
+MAT = "0.10"
+SparseArrays = "1"
+SuiteSparse = "1"
 julia = "1.10"
 
 [extras]
