--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 [compat]
 HDF5 = "0.17"
 LinearAlgebra = "1"
-MAT = "0.10"
+MAT = "0.10, 0.11"
 SparseArrays = "1"
 SuiteSparse = "1"
 julia = "1.10"
